--- a/about.html
+++ b/about.html
@@ -73,42 +73,33 @@
         </div>
     </header>
     <!--//header-->
-     <!-- banner section -->
-     <section class="w3l-banner">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 banner-left d-flex align-items-center pl-lg-5">
-                    <div>
-                        <h3 class="text-white mb-4">Welcome to Bistros <br>
-                            Healthy <span class="type-js"><span class="text-js">Fresh Meals!</span></span></h3>
-                        <p class="banner-text text-white">Open Everyday - <span>7 Am to 10 Pm</span>
-                        </p>
-                        <a class="btn btn-style-white btn-style-border mt-5" href="about.html">Learn More</a>
+       <!-- about section -->
+       <section class="w3l-about-2 py-5" id="about">
+        <div class="container py-md-5 py-4">
+            <div class="row justify-content-between align-items-center pb-lg-5">
+                <div class="col-lg-6 about-2-secs-right mb-lg-0 mb-5">
+                    <div class="image-box inverse position-relative">
+                        <div class="image-box__static">
+                            <img src="assets/images/about2.jpg" alt="" width="364" height="459">
+                        </div>
+                        <div class="image-box__float">
+                            <img src="assets/images/about1.jpg" alt="" width="364" height="459">
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 banner-right">
-                    <div class="small-images">
-                        <div class="ban-grid position-relative">
-                            <img src="assets/images/ban4.jpg" class="img-responsive" alt="" />
-                            <div class="img-ban-sec">
-                                <h5>Fast Foods</h5>
-                                <a href="menu.html" class="btn p-0">More <i class="fa fa-angle-right ml-1"
-                                        aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                        <div class="ban-grid position-relative mt-4">
-                            <img src="assets/images/ban2.jpg" class="img-responsive" alt="" />
-                            <div class="img-ban-sec">
-                                <h5>Breakfasts</h5>
-                                <a href="menu.html" class="btn p-0">More <i class="fa fa-angle-right ml-1"
-                                        aria-hidden="true"></i></a>
-                            </div>
-                        </div>
+                <div class="col-lg-6 about-2-secs-left pl-lg-5 mt-lg-0 mt-5">
+                    <h3 class="title-style mb-3">The Amazing Bitros & <br>Delicious Food</h3>
+                    <p class="mt-4">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                        praesentium voluptatum
+                        deleniti similique sunt in culpa qui officia</p>
+                    <div class="address-sec d-flex align-items-center mt-5">
+                        <i class="fa fa-map-marker mr-4" aria-hidden="true"></i>
+                        <h6>10001 Alleghany st, <br>5th Avenue, 235 Terry, <br>London.</h6>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- //banner section -->
+    <!-- //about section -->
 </body>
 </html>
