--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--header-->
-    <header id="site-header" class="fixed-top">
+    <header id="site-header" class=>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
@@ -72,7 +72,58 @@
             </nav>
         </div>
     </header>
+    <br>
     <!--//header-->
+    <!--form-->
+    <div class="form">
+        <h2>Reservation Form</h2>
+        <br>
+        <form action="">
+            <label for="">Date</label>
+            <input type="date">
+            <label for="">Adults</label>
+            <input type="number">
+            <label for="">Kids</label>
+            <input type="number">
+            <label for="">phone</label>
+            <input type="tel" placeholder="06********">
+            <label for="">Name</label>
+            <input type="text">
+            <button class="button">Send</button>
+        </form>
+    </div>
+    <br>
+    <br>
+    <!--form-->
+    <!--map-->
+    <h1>Map:</h1>
+    <br>
+    <br>
+    <br>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3372.884645829361!2d-9.232986724824837!3d32.28807920881317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac272b160436b3%3A0x5dbb0eecdc4cbb7c!2sDreams%20Food!5e0!3m2!1sen!2sma!4v1696510719357!5m2!1sen!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <br>
+    <br>
+    <br>
+    <!--map-->
+    <!--Contact-->
+    <div class="row footer-top-29 mt-lg-5 mt-md-4 pt-md-5 ndform">
+        <div class="col-lg-3 col-sm-6">
+            <div class="address-grid">
+                <h5>10001 Alleghany st, 5th Avenue, 235 Terry, <br> London.</h5>
+            </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
+            <div class="address-grid">
+                <h5>Phone</h5>
+                <h5 class="phone-number-text mt-2"><a href="tel:+1(21) 234 4567">+1(21) 112 7368</a></h5>
+            </div>
+            <div class="address-grid mt-sm-5 mt-4">
+                <h5>E-mail</h5>
+                <h5 class="email-cont-text mt-1"> <a href="mailto:bistros@mail.com"
+                        class="mail">bistros@mail.com</a></h5>
+            </div>
+        </div>
+    <!--Contact-->
     <!-- footer -->
     <footer class="w3l-footer-29-main"  id="contact">
         <div class="footer-29-w3l py-5">
