--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!--header-->
-    <header id="site-header" class=>
+     <!--header-->
+     <header id="site-header" class="fixed-top" style="background-color: orangered;">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#about">About Us</a>
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html">Menu</a>
@@ -72,23 +72,40 @@
             </nav>
         </div>
     </header>
-    <br>
     <!--//header-->
+    <br>
+    <br>
+    <br>
     <!--form-->
+    <br>
+    <br>
+    <br>
+    <h2 class="hhh">Reservation Form</h2>
+    <div class="allform">
     <div class="form">
-        <h2>Reservation Form</h2>
+       
         <br>
-        <form action="">
+        <form action="" class="former">
             <label for="">Date</label>
+            <br>
             <input type="date">
+            <br>
             <label for="">Adults</label>
+            <br>
             <input type="number">
+            <br>
             <label for="">Kids</label>
+            <br>
             <input type="number">
+            <br>
             <label for="">phone</label>
+            <br>
             <input type="tel" placeholder="06********">
+            <br>
             <label for="">Name</label>
+            <br>
             <input type="text">
+            <br>
             <button class="button">Send</button>
         </form>
     </div>
@@ -96,12 +113,13 @@
     <br>
     <!--form-->
     <!--map-->
-    <h1>Map:</h1>
     <br>
     <br>
     <br>
+    <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3372.884645829361!2d-9.232986724824837!3d32.28807920881317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac272b160436b3%3A0x5dbb0eecdc4cbb7c!2sDreams%20Food!5e0!3m2!1sen!2sma!4v1696510719357!5m2!1sen!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <br>
+</div>
+</div>
     <br>
     <br>
     <!--map-->
