--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--header-->
-    <header id="site-header" class="fixed-top">
+    <header id="site-header" class="fixed-top" style="background-color: orangered;">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#about">About Us</a>
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html">Menu</a>
@@ -73,6 +73,7 @@
         </div>
     </header>
     <!--//header-->
+
      <!-- dishes section -->
      <section class="w3l-recipes py-5" id="menu">
         <div class="container py-md-5 py-4">
@@ -295,7 +296,8 @@
         <br>
         <div class="menu-drinks">
         <br>
-        <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
+        <div class="emn">
+        <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4 int">
             <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
                 <figure>
                     <img src="assets/images/hot.jpg" alt="product" class="img-fluid">
@@ -308,6 +310,7 @@
                 </figure>
             </a>
         </div>
+    
         <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
             <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
                 <figure>
@@ -361,10 +364,11 @@
             </a>
         </div>
     </div>
+</div>
     <h2 class="ourmenu">pizza</h2>
     <br>
     <div class="pizza">
-        <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
+        <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4 pizz">
             <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
                 <figure>
                     <img src="assets/images/margarita.jpg" alt="product" class="img-fluid">
@@ -430,10 +434,11 @@
             </a>
         </div>
     </div>
+    </div>
     <h2 class="ourmenu">Sandwich</h2>
         <br>
         <div class="sandwich">
-            <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
+            <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4 sand">
                 <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
                     <figure>
                         <img src="assets/images/ms.jpg" alt="product" class="img-fluid">
@@ -501,7 +506,7 @@
     </div><h2 class="ourmenu">Burger</h2>
     <br>
     <div class="burger">
-        <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4">
+        <div class="col-md-4 col-sm-6 protfolio-item hover14 mt-md-0 mt-4 burg">
             <a href="menu.html" data-lightbox="example-set" data-title="Design and Development">
                 <figure>
                     <img src="assets/images/mb.jpg" alt="product" class="img-fluid">
