--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--header-->
-    <header id="site-header" class="fixed-top">
+    <header id="site-header" class="fixed-top" style="background-color: orangered;">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#about">About Us</a>
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html">Menu</a>
@@ -73,6 +73,7 @@
         </div>
     </header>
     <!--//header-->
+
        <!-- about section -->
        <section class="w3l-about-2 py-5" id="about">
         <div class="container py-md-5 py-4">
