--- a/contact.html
+++ b/contact.html
@@ -73,18 +73,10 @@
         </div>
     </header>
     <!--//header-->
-    <br>
-    <br>
-    <br>
     <!--form-->
-    <br>
-    <br>
-    <br>
     <h2 class="hhh">Reservation Form</h2>
     <div class="allform">
     <div class="form">
-       
-        <br>
         <form action="" class="former">
             <label for="">Date</label>
             <br>
@@ -106,22 +98,16 @@
             <br>
             <input type="text">
             <br>
-            <button class="button">Send</button>
+            <br>
+            <input type="submit" value="Send">
         </form>
     </div>
-    <br>
-    <br>
     <!--form-->
     <!--map-->
-    <br>
-    <br>
-    <br>
     <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3372.884645829361!2d-9.232986724824837!3d32.28807920881317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xdac272b160436b3%3A0x5dbb0eecdc4cbb7c!2sDreams%20Food!5e0!3m2!1sen!2sma!4v1696510719357!5m2!1sen!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 </div>
-    <br>
-    <br>
     <!--map-->
     <!--Contact-->
     <div class="row footer-top-29 mt-lg-5 mt-md-4 pt-md-5 ndform">
@@ -220,6 +206,7 @@
             </div>
         </div>
     </footer>
+
     <!-- //footer -->
 </body>
 </html>
