--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style-starter.css">
-    <title>Document</title>
+    <title>Burger - Restaurants near you   </title>
+      <!--Title-->
+      <meta name="Description" content="A restaurent near u with a big meu">
+      <meta name="keyword" content="resto restaurent rasto near me">
 </head>
 <body>
      <!--header-->
@@ -99,7 +102,7 @@
             <input type="text">
             <br>
             <br>
-            <input type="submit" value="Send">
+            <input class="inp" type="submit" value="Send" style="background-color: orangered;">
         </form>
     </div>
     <!--form-->
@@ -110,7 +113,7 @@
 </div>
     <!--map-->
     <!--Contact-->
-    <div class="row footer-top-29 mt-lg-5 mt-md-4 pt-md-5 ndform">
+    <div class="row footer-top-29  pt-md-5 ndform">
         <div class="col-lg-3 col-sm-6">
             <div class="address-grid">
                 <h5>10001 Alleghany st, 5th Avenue, 235 Terry, <br> London.</h5>
