--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Burger - Restaurants Category Responsive Website Template - Home :   </title>
+    <title>Burger - Restaurants near you   </title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <!-- //google-fonts -->
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
+    <!--Title-->
+    <meta name="Description" content="A restaurent near u with a big meu">
+    <meta name="keyword" content="resto restaurent rasto near me">
 </head>
 
 <body>
