--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style-starter.css">
-    <title>Document</title>
+    <title>Burger - Restaurants near you   </title>
+      <!--Title-->
+      <meta name="Description" content="A restaurent near u with a big meu">
+      <meta name="keyword" content="resto restaurent rasto near me">
 </head>
 <body>
     <!--header-->
