--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
     <!--Title-->
-    <meta name="Description" content="A restaurent near u with a big meu">
-    <meta name="keyword" content="resto restaurent rasto near me">
+    <meta name="Description" content="A restaurent near you with a big menu">
+    <meta name="keyword" content="resto restaurent rasto near me fine dinning dine dash">
+    <meta name="Author" content="Bistro food and drinks">
 </head>
 
 <body>
