--- a/menu.html
+++ b/menu.html
@@ -575,6 +575,7 @@
         </a>
     </div>
 </div>
+<div class="sec"></div>
     <!--menu-->
      <!-- footer -->
      <footer class="w3l-footer-29-main"  id="contact">
