--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="./assets/css/style-starter.css">
     <title>Burger - Restaurants near you   </title>
       <!--Title-->
-      <meta name="Description" content="A restaurent near u with a big meu">
-      <meta name="keyword" content="resto restaurent rasto near me">
+      <meta name="Description" content="A restaurent near you with a big menu">
+      <meta name="keyword" content="resto restaurent rasto near me fine dinning dine dash">
+      <meta name="Author" content="Bistro food and drinks">
 </head>
 <body>
     <!--header-->
