--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--header-->
-    <header id="site-header" class="fixed-top" style="background-color: orangered;">
+    <header id="site-header" class="fixed-top" style="background-color: orange;">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
@@ -32,10 +32,10 @@
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ml-lg-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item ">
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="about.html">About Us</a>
                         </li>
                         <li class="nav-item">
